--- a/serial-plotter/pom.xml
+++ b/serial-plotter/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>org.onebeartoe.data.visualization.serial.plotter.MainApp</mainClass>
+        <mainClass>org.onebeartoe.data.visualization.serial.plotter.SerialPotter</mainClass>
     </properties>
 
     <organization>
