--- a/serial-plotter/pom.xml
+++ b/serial-plotter/pom.xml
@@ -27,10 +27,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>onebeartoe-system</artifactId>  
+            <version>1.0-SNAPSHOT</version>            
+        </dependency>
+
+        <!--dependency>
             <groupId>org.rxtx</groupId>
             <artifactId>rxtx</artifactId>
             <version>2.1.7</version>
-        </dependency>
+        </dependency-->
     </dependencies>
 
     <build>
