--- a/serial-plotter/pom.xml
+++ b/serial-plotter/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>onebeartoe-system</artifactId>  
             <version>1.0-SNAPSHOT</version>            
         </dependency>
+        
+        <dependency>
+            <groupId>org.rxtx</groupId>
+            <artifactId>rxtx</artifactId>
+            <version>2.1.7</version>
+        </dependency>
     </dependencies>
 
     <build>
