--- a/continuous-integration/pom.xml
+++ b/continuous-integration/pom.xml
@@ -20,9 +20,12 @@
     
     <modules>
         <module>extreme-notifications</module>
+        <module>utility</module>
     </modules>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>    
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>        
 </project>
