--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,18 @@
         <module>serial-plotter</module>
     </modules>    
 
+    <repositories>
+	<repository>
+            <id>oss-snapshots-repo</id>
+            <name>Sonatype OSS Maven Repository</name>
+            <url>https://repository-onebeartoe.forge.cloudbees.com/snapshot/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+	</repository>
+    </repositories>
+
     <build>
         <!-- To define the plugin version in your parent POM -->
         <pluginManagement>
