--- a/continuous-integration/extreme-notifications/pom.xml
+++ b/continuous-integration/extreme-notifications/pom.xml
@@ -32,7 +32,19 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>onebeartoe-system</artifactId>  
+            <version>1.0-SNAPSHOT</version>            
+        </dependency>
+
+        <dependency>
+            <groupId>org.rxtx</groupId>
+            <artifactId>rxtx</artifactId>
+            <version>2.1.7</version>
+        </dependency>        
+                        
         <dependency>
             <groupId>rome</groupId>
             <artifactId>rome</artifactId>
