--- a/continuous-integration/extreme-notifications/pom.xml
+++ b/continuous-integration/extreme-notifications/pom.xml
@@ -52,6 +52,7 @@
         </dependency>
     </dependencies>
     
+<!-- this is what we used to get the URL into an environment variable for the JUnit tests -->
     <!--build>
         <pluginManagement>
             <plugins>
@@ -69,4 +70,33 @@
             </plugins>
         </pluginManagement>	            
     </build-->
+    
+    <build>
+        <plugins>
+            <plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <mainClass>org.onebeartoe.continuous.integration.extream.notifications.JenkinsRssPoller</mainClass>
+			</manifest>
+		    </archive>
+                    
+		    <descriptorRefs>
+			<descriptorRef>jar-with-dependencies</descriptorRef>
+		    </descriptorRefs>
+		</configuration>
+		<executions>
+		    <execution>
+			<id>make-assembly</id>   <!-- this is used for inheritance merges -->
+			<phase>package</phase>   <!-- bind to the packaging phase -->
+			<goals>
+			    <goal>single</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
+        </plugins>
+    </build>    
+    
 </project>
