A JAR diff tool was added.  The serial communicaton port can be specified via a command line argument.

--- a/continuous-integration/utility/pom.xml
+++ b/continuous-integration/utility/pom.xml
@@ -14,9 +14,13 @@
     
     <packaging>jar</packaging>
     
-    <name>onebeartoe-continuous-integration-utility</name>
+    <name>onebeartoe-building-applications-continuous-integration-utility</name>
     
     <dependencies>
-
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>onebeartoe-system</artifactId>  
+            <version>1.0-SNAPSHOT</version>            
+        </dependency>
     </dependencies>
 </project>
