--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>drinking-bird</module>
         <module>parent-child</module>
         <module>serial-plotter</module>
+        <module>onebeartoe-jar-diff</module>
     </modules>    
 
     <repositories>
