--- a/continuous-integration/integration-testing/pom.xml
+++ b/continuous-integration/integration-testing/pom.xml
@@ -3,50 +3,89 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
   
-  <parent>
-    <groupId>org.onebeartoe.continuous.integration</groupId>
-    <artifactId>continuous-integration</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <groupId>org.onebeartoe.continuous.integration</groupId>
+        <artifactId>continuous-integration</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-  <artifactId>integration-testing</artifactId>
+    <artifactId>integration-testing</artifactId>
   
-  <name>onebeartoe-building-apps-continuous-integration-testing</name>
+    <name>onebeartoe-building-apps-continuous-integration-testing</name>
+
+    <url>http://maven.apache.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <selenium.version>2.44.0</selenium.version>
+    </properties>
   
-  <url>http://maven.apache.org</url>
-  
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <selenium.version>2.44.0</selenium.version>
-  </properties>
-  
-	<dependencies>
-		<dependency>
-			<groupId>net.anthavio</groupId>
-			<artifactId>phanbedder-1.9.7</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-	
-		<dependency>
-			<groupId>com.github.detro.ghostdriver</groupId>
-			<artifactId>phantomjsdriver</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-	  
-	    <dependency>
-	      <groupId>junit</groupId>
-	      <artifactId>junit</artifactId>
-	      <version>3.8.1</version>
-	      <scope>test</scope>
-	    </dependency>
-	    
+    <dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>${selenium.version}</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>htmlunit-driver</artifactId>
+		    <version>2.23.2</version>
 		</dependency>    
-	</dependencies>
+    
+        <dependency>
+	        <groupId>com.github.detro.ghostdriver</groupId>
+	        <artifactId>phantomjsdriver</artifactId>
+	        <version>1.1.0</version>
+	        <exclusions>
+       
+	        </exclusions>	        
+<!--  	        
+Using Selenium version 2.44.0 with the Chrome browser,
+these exclusions were added to avoid the ClassCastException 
+on ChromeWebDriver to TakesScreenshot.
+	        <exclusions>
+       	        <exclusion>
+		          <groupId>org.seleniumhq.selenium</groupId>
+		          <artifactId>selenium-remote-driver</artifactId>
+		        </exclusion>
+		        <exclusion>
+		          <groupId>org.seleniumhq.selenium</groupId>
+		          <artifactId>selenium-server</artifactId>
+        		</exclusion>
+	        </exclusions>
+-->	        
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.9</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+          <scope>test</scope>
+        </dependency>
+                                
+        <dependency>
+                <groupId>net.anthavio</groupId>
+                <artifactId>phanbedder-1.9.7</artifactId>
+                <version>1.0.0</version>
+        </dependency>
+	    
+        <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>${selenium.version}</version>
+                <scope>test</scope>
+        </dependency>    
+    </dependencies>
 </project>
