--- a/continuous-integration/integration-testing/pom.xml
+++ b/continuous-integration/integration-testing/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     
     <modelVersion>4.0.0</modelVersion>
   
@@ -19,45 +19,54 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <selenium.version>2.41</selenium.version>
+        <!--
         <selenium.version>2.44.0</selenium.version>
+        -->
+        <suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
     </properties>
   
     <dependencies>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>${selenium.version}</version>
-			<scope>test</scope>
-		</dependency>
+        
+        
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.41.0</version>
+            <!--
+            <version>${selenium.version}</version>
+            -->
+            <scope>test</scope>
+        </dependency>
 		
-		<dependency>
-		    <groupId>org.seleniumhq.selenium</groupId>
-		    <artifactId>htmlunit-driver</artifactId>
-		    <version>2.23.2</version>
-		</dependency>    
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>htmlunit-driver</artifactId>
+            <version>2.23.2</version>
+        </dependency>    
     
         <dependency>
-	        <groupId>com.github.detro.ghostdriver</groupId>
-	        <artifactId>phantomjsdriver</artifactId>
-	        <version>1.1.0</version>
-	        <exclusions>
+            <groupId>com.github.detro.ghostdriver</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.1.0</version>
+            <exclusions>
        
-	        </exclusions>	        
-<!--  	        
-Using Selenium version 2.44.0 with the Chrome browser,
-these exclusions were added to avoid the ClassCastException 
-on ChromeWebDriver to TakesScreenshot.
-	        <exclusions>
-       	        <exclusion>
-		          <groupId>org.seleniumhq.selenium</groupId>
-		          <artifactId>selenium-remote-driver</artifactId>
-		        </exclusion>
-		        <exclusion>
-		          <groupId>org.seleniumhq.selenium</groupId>
-		          <artifactId>selenium-server</artifactId>
-        		</exclusion>
-	        </exclusions>
--->	        
+            </exclusions>	        
+            <!--  	        
+            Using Selenium version 2.44.0 with the Chrome browser,
+            these exclusions were added to avoid the ClassCastException 
+            on ChromeWebDriver to TakesScreenshot.
+                            <exclusions>
+                            <exclusion>
+                                      <groupId>org.seleniumhq.selenium</groupId>
+                                      <artifactId>selenium-remote-driver</artifactId>
+                                    </exclusion>
+                                    <exclusion>
+                                      <groupId>org.seleniumhq.selenium</groupId>
+                                      <artifactId>selenium-server</artifactId>
+                                    </exclusion>
+                            </exclusions>
+            -->	        
         </dependency>
         
         <dependency>
@@ -69,23 +78,49 @@ on ChromeWebDriver to TakesScreenshot.
         </dependency>
 
         <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.12</version>
-          <scope>test</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
                                 
         <dependency>
-                <groupId>net.anthavio</groupId>
-                <artifactId>phanbedder-1.9.7</artifactId>
-                <version>1.0.0</version>
+            <groupId>net.anthavio</groupId>
+            <artifactId>phanbedder-1.9.7</artifactId>
+            <version>1.0.0</version>
         </dependency>
-	    
+	      
+<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-firefox-driver</artifactId>
+        <version>2.41.0</version>
+    </dependency>        
+        
         <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-java</artifactId>
-                <version>${selenium.version}</version>
-                <scope>test</scope>
-        </dependency>    
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8</version>
+            <scope>test</scope>
+        </dependency>
+        
     </dependencies>
+    
+    <build>
+        <plugins>
+            <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                    </suiteXmlFiles>
+
+                </configuration>
+            </plugin>
+            -->
+        </plugins>
+    </build>
 </project>
