--- a/continuous-integration/extreme-notifications/pom.xml
+++ b/continuous-integration/extreme-notifications/pom.xml
@@ -44,6 +44,12 @@
 
         <dependency>
             <groupId>org.onebeartoe</groupId>
+            <artifactId>network</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
             <artifactId>onebeartoe-system</artifactId>  
             <version>1.0-SNAPSHOT</version>            
         </dependency>
