--- a/continuous-integration/integration-testing/pom.xml
+++ b/continuous-integration/integration-testing/pom.xml
@@ -103,6 +103,13 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>3.4.0</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
