The POM now uses some defaults from the parent POM.
The main class name was updated.

--- a/drinking-bird/pom.xml
+++ b/drinking-bird/pom.xml
@@ -4,9 +4,13 @@
     
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.onebeartoe.building.applications</groupId>
+    <parent>
+        <groupId>org.onebeartoe</groupId>
+        <artifactId>onebeartoe-building-applications-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>        
+    </parent>
+
     <artifactId>onebeartoe-building-applications-drinking-bird</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     
     <packaging>jar</packaging>
 
@@ -14,14 +18,22 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>org.onebeartoe.building.applications.drinking.bird.MainApp</mainClass>
+        <mainClass>org.onebeartoe.building.applications.drinking.bird.JavafxDrinkingBirdApp</mainClass>
     </properties>
 
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>Your Organisation</name>
+        <name>onebeartoe.org</name>
     </organization>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>onebeartoe-application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+    
     <build>
         <plugins>
             <plugin>
@@ -107,5 +119,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
