A module configuration was corrected.

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <module>drinking-bird</module>
         <module>log-diver</module>
         <module>parent-child</module>
-        <module>web/automation</module>
+        <module>web</module>
     </modules>
 
     <repositories>
