--- a/continuous-integration/integration-testing/pom.xml
+++ b/continuous-integration/integration-testing/pom.xml
@@ -27,7 +27,11 @@
     </properties>
   
     <dependencies>
-        
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160807</version>
+        </dependency>
         
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -90,11 +94,11 @@
             <version>1.0.0</version>
         </dependency>
 	      
-<dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-firefox-driver</artifactId>
-        <version>2.41.0</version>
-    </dependency>        
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>2.41.0</version>
+        </dependency>        
         
         <dependency>
             <groupId>org.testng</groupId>
@@ -106,9 +110,13 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-remote-driver</artifactId>
+            <version>2.44.0</version>
+<!--            
             <version>3.4.0</version>
+            <version>2.44.0</version>
+-->  
             <scope>test</scope>
-            <type>jar</type>
+<!--            <type>jar</type> -->
         </dependency>
     </dependencies>
     
