--- a/web/automation/pom.xml
+++ b/web/automation/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.onebeartoe</groupId>
+        <groupId>org.onebeartoe.building</groupId>
         <artifactId>onebeartoe-web</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
