--- a/continuous-integration/extreme-notifications/pom.xml
+++ b/continuous-integration/extreme-notifications/pom.xml
@@ -23,6 +23,12 @@
     
     <dependencies>
         <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
