--- a/web/automation/pom.xml
+++ b/web/automation/pom.xml
@@ -16,7 +16,7 @@
     <name>onebeartoe-building-applications-web-automation</name>
 
     <properties>
-        <unit.of.work.test.url>http://localhost:8080/onebeartoe-com/productivity/income-calculator/salary-to-rate/</unit.of.work.test.url>
+        <unit.of.work.test.url>http://localhost:8080/onebeartoe-com/</unit.of.work.test.url>
     </properties>
 
     <dependencies>
