--- a/web/automation/pom.xml
+++ b/web/automation/pom.xml
@@ -27,6 +27,30 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+<!--    
+            <scope>test</scope>
+-->
+        </dependency>
+
+<!--
+        <dependency>
+            <groupId>org.onebeartoe.continuous.integration</groupId>
+            <artifactId>integration-testing</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+-->
+
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.11.0</version>
@@ -68,7 +92,7 @@
                         </goals>
                       </execution>
                 </executions>              
-            </plugin>            
+            </plugin>
         </plugins>
     </build>
     
