--- a/web/automation/src/test/resources/unit-of-work.properties
+++ b/web/automation/src/test/resources/unit-of-work.properties
@@ -2,3 +2,6 @@
 test.url=${unit.of.work.test.url}
 
 webdriver.type=${unit.of.work.webdriver.type}
+
+webdriver.pathKey=${unit.of.work.webdriver.pathKey}
+webdriver.path=${unit.of.work.webdriver.path}
