--- a/web/automation/src/test/resources/unit-of-work.properties
+++ b/web/automation/src/test/resources/unit-of-work.properties
@@ -5,3 +5,5 @@ webdriver.type=${unit.of.work.webdriver.type}
 
 webdriver.pathKey=${unit.of.work.webdriver.pathKey}
 webdriver.path=${unit.of.work.webdriver.path}
+
+webdriver.headless=${unit.of.work.webdriver.headless}
