Some documentation was added.

--- a/continuous-integration/extreme-notifications/pom.xml
+++ b/continuous-integration/extreme-notifications/pom.xml
@@ -67,6 +67,12 @@
             <scope>test</scope>
         </dependency>
 
+<!--
+<dependency>
+    <groupId>org.testfx</groupId>
+    <artifactId>testfx-
+</dependency>
+-->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
