A directory listing was added for the headless Web automation screenshots.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
 
 script:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - ls -la web/automation/target/screenshots/
   
 cache:
   directories:
