--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ addons:
     token: $SONAR_TOKEN
 
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
-  - ls -la web/automation/target/screenshots/
+  - mvn clean
+  - mvn -P chrome,headless,production org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
+  - ll -la web/automation/target/screenshots/
   
 cache:
   directories:
